[gd_scene load_steps=6 format=3 uid="uid://bk4jkhkej1lvs"]

[ext_resource type="Script" path="res://Classes/DisplayCard/DisplayCard.gd" id="1_2w4k7"]
[ext_resource type="PackedScene" uid="uid://buo6if7swdee7" path="res://Assets/Cards/CartaTarot.glb" id="1_qaq00"]
[ext_resource type="Texture2D" uid="uid://b8mtdcg0o31n8" path="res://Assets/Cards/CartaTarot_TarotBola8.png" id="3_3dg4g"]
[ext_resource type="FontFile" uid="uid://dfomoacntffo" path="res://Assets/alagard.ttf" id="4_xjab8"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_rtksh"]
resource_local_to_scene = true
resource_name = "Material.002"
cull_mode = 2
albedo_texture = ExtResource("3_3dg4g")

[node name="DisplayCard" type="Node3D"]
script = ExtResource("1_2w4k7")

[node name="CartaTarot" parent="." instance=ExtResource("1_qaq00")]
transform = Transform3D(-3.0598e-08, 0, -0.7, 0, 0.7, 0, 0.7, 0, -3.0598e-08, 0, 0, 0)

[node name="Plane" parent="CartaTarot" index="0"]
transform = Transform3D(-1.09278e-07, 1, 0, -2.5, -4.37114e-08, 0, 0, 0, 1.5, -0.779124, 1.41543, 2.1896)
material_override = SubResource("StandardMaterial3D_rtksh")

[node name="CardLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.45936, 0)
shaded = true
render_priority = 2
outline_render_priority = 1
text = "IV
Get the ball rolling"
font = ExtResource("4_xjab8")

[editable path="CartaTarot"]
